# Self-driving-car-ROS2

./: CMakeLists.txt  README.md  package.xml
config/: calibration.yaml  controller.yaml
launch/: simulation.launch.py
mesh/: track.mtl
src/: line_follower.py
urdf/: body.xacro  monocular_camera.xacro  steering.xacro  vehicle.gazebo  vehicle.xacro  wheel.xacro
worlds/: track.sdf
